# analise-rotatividade

./: .gitignore  README.md  enade.ipynb  fixed.ipynb  main.ipynb  pyproject.toml
data/: IGC_2023.xlsx  aposentadorias.csv  conceito_enade_2022.xlsx  conceito_enade_2023.xlsx  conceito_igc.parquet  conceito_igc_filtrado.parquet  contratação_pms.csv  contratação_pmss.csv  dados_organizados.parquet  desligamentos.csv  igc.parquet  igc_2022.xlsx  servidores.csv
