[project]
name = "rotatividade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "linearmodels>=6.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
